Print exception will be thrown in HandleExceptionsWithMultipleFutures